Fixing an issue with zindex where the notifications are behind the dashboard. Fixing an issue with firefox/IE date parsing where they don't like the '-' characters in addition to the millseconds+ component of datetime. Removing debug statements.

--- a/extras/www/static/css/core.css
+++ b/extras/www/static/css/core.css
@@ -8,12 +8,15 @@
     padding-bottom: 10px;
     padding-right: 10px;
     text-align: center;
+    z-index: 99;
 }
 
 #close_notifications, #notifications_count {
     background-color: white;
     border-style: solid;
     border-width: thin;
+    padding-right: 40px;
+    padding-left: 40px;
 }
 
 span.noty_modified {
